# kanto-rs-curses

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: ContainersTableView.rs  containers_table_view.rs  kanto_api.rs  lib.rs  main.rs
